--- a/formulario.html
+++ b/formulario.html
@@ -4,6 +4,8 @@
 	<title>Formulario de contacto</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--bootstrap css-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
@@ -22,15 +24,25 @@
 			</div>
 		</div>
 	</div>
-	<!--fomrulario de bootstrap-->
-	<div class="mb-3">
-  		<label for="exampleFormControlInput1" class="form-label">Email address</label>
-  		<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+	<!--titulo form-->
+	<div class="texto__container__form__contacto">
+		<h1>Envianos tu consulta</h2>
+		<p>Realizamos ambientaciones campestres</p>
+	</div>
+	<!--form de bootstrap-->
+	<div class="form__container__home p-4">
+    	<div class="mb-3">
+  			<label for="exampleFormControlInput1" class="form-label">Email address</label>
+  			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
 		</div>
 		<div class="mb-3">
-  		<label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-  		<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
+  			<label for="exampleFormControlTextarea1" class="form-label">Escríbenos tu consulta</label>
+  			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+		</div>
+		<div class="boton__enviarform__contacto">
+			<button type="button" class="btn btn-dark">enviar</button>
+		</div>
+    </div>
 	<!--footer-->
     <div class="footer__container">
     	<div class="footer">
@@ -46,5 +58,6 @@
 			</div>
 		</div>
 	</div>
+
 </body>
 </html>
