--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Beduina ambientaciones</title>
+	<!--require meta tags-->
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1">
+	<!--bootstrap css-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<title>Beduina ambientaciones</title>
 	<style type="text/css">
 		img{
 			width: 100%;
@@ -52,14 +55,14 @@
 	</div>
 	<!--seccion opinion-->
 	<div class="opinion__publico">
-    	<p>"Cras metus habitant auctor ad feugiat libero curabitur magnis laoreet volutpat phasellus id, ac malesuada primis mauris eu mattis dictum est facilisi duis dictumst dui aenean."</p>
+    	<p>"Cras metus habitant auctor ad feugiat libero curabitur magnis laoreet volutpat phasellus id, <span>ac malesuada primis mauris eu mattis dictum est facilisi duis dictumst</span> dui aenean."</p>
     </div>
     <div>
     <!--contenido secciones servicios-->
     <div class="contenedor__grid">
     	<div class="texto__cardgrid">
     		<p class="titulo__cardgrid">Título</p>
-    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada.</p>
+    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada.Volutpat phasellus id, ac malesuada libero curabitur magnis laoreet volutpat phasellus id</p>
     	</div>
     	<div class="imagen__contenedorgrid">
     		<img class="imagen__cardgrid" src="assets/servicio-a-beduina.jpg" alt="servcio decoracion">
@@ -71,13 +74,13 @@
     	</div>
     	<div class="texto__cardgrid">
     		<p class="titulo__cardgrid">Título</p>
-    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada.</p>
+    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada libero curabitur magnis laoreet volutpat phasellus id</p>
     	</div>
     </div>
     <div class="contenedor__grid">
     	<div class="texto__cardgrid">
     		<p class="titulo__cardgrid">Título</p>
-    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada.</p>
+    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada,libero curabitur magnis laoreet volutpat phasellus id</p>
     	</div>
     	<div class="imagen__contenedorgrid">
     		<img class="imagen__cardgrid" src="assets/servicio-c-beduina.jpg" alt="servcio decoracion">
@@ -85,23 +88,31 @@
     </div>
     <!--contenido empresas que confian-->
     <div class="contenedor__emplogos">
-    	<p class="texto__marcas">Aca van a estar las marccas</p>
-    	<img class="" src="" alt="">
-    	<img class="" src="" alt="">
+    	<p class="texto__marcas">Aca van a estar las marcas</p>
     	<img class="" src="" alt="">
     	<img class="" src="" alt="">
     	<img class="" src="" alt="">
     	<img class="" src="" alt="">
     </div>
+    <!--texto form home-->
+    <div class="texto__container__form__home">
+		<h1>Envianos tu consulta</h2>
+		<p>Realizamos ambientaciones campestres</p>
+	</div>
     <!--contenido form-->
-    <div class="mb-3">
-  		<label for="exampleFormControlInput1" class="form-label">Email address</label>
-  		<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-	</div>
-	<div class="mb-3">
-  		<label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-  		<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-	</div>
+    <div class="form__container__home p-4">
+    	<div class="mb-3">
+  			<label for="exampleFormControlInput1" class="form-label">Email address</label>
+  			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+		</div>
+		<div class="mb-3">
+  			<label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+  			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+		</div>
+		<div class="boton__enviarform__contacto">
+			<button type="button" class="btn btn-dark">enviar</button>
+		</div>
+    </div>
     <!--<div class="contenedor__form">
     	<div class="texto__form">
     		<p>Acompañamos tu felicidad (formualario)</p>
@@ -121,5 +132,6 @@
 			</div>
 		</div>
 	</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
