--- a/formulario.html
+++ b/formulario.html
@@ -24,19 +24,24 @@
 			</div>
 		</div>
 	</div>
-	<!--titulo form-->
-	<div class="texto__container__form__contacto">
+	<!--Fondo del body-->
+	<div class="fondo-body-form">
+		<img src="assets/fondo-formulario.png" alt="fondo-formulario">
+			<p></p>
+	</div>
+	<!--texto form home-->
+    <div class="texto__container__form__home">
 		<h1>Envianos tu consulta</h2>
 		<p>Realizamos ambientaciones campestres</p>
 	</div>
-	<!--form de bootstrap-->
-	<div class="form__container__home p-4">
+    <!--contenido form-->
+    <div class="form__container__home p-4 w-50 mx-auto">
     	<div class="mb-3">
   			<label for="exampleFormControlInput1" class="form-label">Email address</label>
   			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
 		</div>
 		<div class="mb-3">
-  			<label for="exampleFormControlTextarea1" class="form-label">Escríbenos tu consulta</label>
+  			<label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
   			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 		</div>
 		<div class="boton__enviarform__contacto">
@@ -51,9 +56,9 @@
 			</div>
 			<div>
 				<ul class="footer__redes">
-					<li>Instagram</li>
-					<li>Facebook</li>
-					<li>Pinterest</li>
+					<li><a href="https://www.instagram.com/ambeduina/?hl=es">Instagram</a></li>
+					<li><a href="https://www.facebook.com/ambeduina/">Facebook</a></li>
+					<li><a href="https://ar.pinterest.com/ambediuna/_created/">Pinterest</a></li>
 				</ul>
 			</div>
 		</div>
