--- a/galeria.html
+++ b/galeria.html
@@ -22,6 +22,45 @@
 			</div>
 		</div>
 	</div>
+	<!---Galeria de fotos 1-->
+	<div id="titulo_pagina_galeria">
+		<h1>Bodas campestres: inspirate algunas de las fotos de nuestros eventos</h1>
+	</div>
+	<div class="galeria_row">
+		<div class="titulo-block-galeria">
+			<h2>Boda de verano</h2>
+			<div class="column-fotos-galeria">
+				<img src="assets/imagen 1a verano.png" alt="boda en verano">
+				<img src="assets/imagen 1b verano.png" alt="boda en verano">
+				<img src="assets/imagen 1c verano.png" alt="boda en verano">
+				<img src="assets/imagen 1d verano.png" alt="boda en verano">
+			</div>
+		</div>
+		<div class="titulo-block-galeria">
+			<h2>Boda boho campestre</h2>
+			<div class="column-fotos-galeria">
+				<img src="assets/imagene 1 b.png" alt="boda en el campo">
+				<img src="assets/imagene 2 b.png" alt="boda en el campo">
+				<img src="assets/imagene 3 b.png" alt="boda en el campo">
+				<img src="assets/imagene 4 b.png" alt="boda en el campo">
+			</div>
+		</div>
+		<div class="titulo-block-galeria">
+			<h2>Boda de otoño</h2>
+			<div class="column-fotos-galeria">
+				<img src="assets/imagen 1a otoño.png" alt="boda en otoño">
+				<img src="assets/imagen 1b otoño.png" alt="boda en otoño">
+				<img src="assets/imagen 1c otoño.png" alt="boda en otoño">
+				<img src="assets/imagen 1d otoño.png" alt="boda en otoño">
+			</div>
+		</div>
+	</div>
+	<!--seccion pinterest-->
+	<div class="contenedor-pinterest-galeria">
+		<div class="titulo-block-galeria">
+			<h2>Accede a nuestra sección especial en <a href="https://pin.it/3wz2mIg">pinterest</a></h2>
+		</div>
+	</div>
 	<!--footer-->
     <div class="footer__container">
     	<div class="footer">
@@ -30,9 +69,9 @@
 			</div>
 			<div>
 				<ul class="footer__redes">
-					<li>Instagram</li>
-					<li>Facebook</li>
-					<li>Pinterest</li>
+					<li><a href="https://www.instagram.com/ambeduina/?hl=es">Instagram</a></li>
+					<li><a href="https://www.facebook.com/ambeduina/">Facebook</a></li>
+					<li><a href="https://ar.pinterest.com/ambediuna/_created/">Pinterest</a></li>
 				</ul>
 			</div>
 		</div>
