--- a/index.html
+++ b/index.html
@@ -33,66 +33,101 @@
 	</div>
 	<!--hero image-->
 	<div class="contenedor__image">
-		<img src="assets/beduina-amb-flores.jpg" alt="hero image beduina">
-			<p>Acompañamos tu felicidad</p>
+		<img src="assets/home-header-desktop-2.jpg" alt="hero image beduina">
+			<p>Ambientacion de eventos & Event planner</p>
 	</div>
 	<!--contenedores de servicios-->
-	<div class="contenido__servicios">
-		<div class="contenedor__items">
-			<div class="item1">
-				<img src="assets/beduina-icon1.png" alt="ambientaciones_personalizadas">
-				<p>Ambientaciones personalizadas</p>
+	<div class="container_si_elegirnos text-center">
+		<p class="titulo_elegirnos">Ambientación de eventos con estilo campestre y en armonía con la naturaleza</p>
+		<div class="container_iconos_elegirnos">
+			<div class="col-md-3 row">
+				<div class="icono_elegirnos_especialistas">
+					<img src="assets/home-icono1.png" alt="servicio-1-beduina">
+					<p class="texto-icono-somos">Personalizamos cada propuesta según estilo y presupuesto.</p>
+				</div>
 			</div>
-			<div class="item2">
-				<img src="assets/beduina-icon2.png" alt="ambientaciones_personalizadas">
-				<p>Ambientaciones personalizadas</p>
+			<div class="col-md-3 row">
+				<div class="icono_elegirnos_especialistas">
+					<img src="assets/home-icono2.png" alt="servicio-1-beduina">
+					<p class="texto-icono-somos">Somos especialistas en armado de ramos y plantas para tu decoración.</p>
+				</div>
 			</div>
-			<div class="item3">
-				<img src="assets/beduina-icon3.png" alt="ambientaciones_personalizadas">
-				<p>Ambientaciones personalizadas</p>
+			<div class="col-md-3 row">
+				<div class="icono_elegirnos_especialistas">
+					<img src="assets/home-icono3.png" alt="servicio-1-beduina">
+					<p class="texto-icono-somos">Contamos con diseños de tarjetas de invitación, números de mesa y albums.</p>
+				</div>
 			</div>
-		</div>
+			<div class="col-md-3 row">
+				<div class="icono_elegirnos_especialistas">
+					<img src="assets/home-icono4.png" alt="servicio-1-beduina">
+					<p class="texto-icono-somos">Realizamos el armado completo de kits e baño y souvenirs.</p>
+				</div>
+			</div>
 	</div>
 	<!--seccion opinion-->
 	<div class="opinion__publico">
-    	<p>"Cras metus habitant auctor ad feugiat libero curabitur magnis laoreet volutpat phasellus id, <span>ac malesuada primis mauris eu mattis dictum est facilisi duis dictumst</span> dui aenean."</p>
+    	<p>"Un placer trabajar con este equipo increíble. Es realmente un trabajo único en equipo con amor y mucha paciencia. Desde el momento uno nos acompañaron con la mejor onda. Siempre nos dieron mucha confianza, lo cual fue fundamental ya que organizamos la boda a la distancia. Fueron siempre muy profesionales y detallistas.
+			Amamos que sean parte de nuestro casamiento. Ceci y Jonás." Casamientos.com</p>
     </div>
     <div>
     <!--contenido secciones servicios-->
-    <div class="contenedor__grid">
-    	<div class="texto__cardgrid">
-    		<p class="titulo__cardgrid">Título</p>
-    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada.Volutpat phasellus id, ac malesuada libero curabitur magnis laoreet volutpat phasellus id</p>
-    	</div>
-    	<div class="imagen__contenedorgrid">
-    		<img class="imagen__cardgrid" src="assets/servicio-a-beduina.jpg" alt="servcio decoracion">
-    	</div>
+	<div class="container_si_elegirnos text-center">
+		<p class="titulo_elegirnos">Conoce más sobre nuestros servicios</p>
     </div>
-    <div class="contenedor__grid">
-    	<div class="imagen__contenedorgrid">
-    		<img class="imagen__cardgrid" src="assets/servicio-b-beduina.jpg" alt="servcio decoracion">
-    	</div>
-    	<div class="texto__cardgrid">
-    		<p class="titulo__cardgrid">Título</p>
-    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada libero curabitur magnis laoreet volutpat phasellus id</p>
-    	</div>
-    </div>
-    <div class="contenedor__grid">
-    	<div class="texto__cardgrid">
-    		<p class="titulo__cardgrid">Título</p>
-    		<p class="descripcion__cardgrid">descripcion del servicio. Volutpat phasellus id, ac malesuada,libero curabitur magnis laoreet volutpat phasellus id</p>
-    	</div>
-    	<div class="imagen__contenedorgrid">
-    		<img class="imagen__cardgrid" src="assets/servicio-c-beduina.jpg" alt="servcio decoracion">
-    	</div>
-    </div>
+	<section class="contenedorcards-pag-servicios">
+		<div class="cardservice-sibeduina">
+			<figure class="cardservice-image">
+				<img src="assets/foto a- service.jpg" alt="servcio prueba">
+			</figure>
+			<div class="textcontentcards-service">
+				<h2>Servicio profesional</h2>
+				<p>Ambientaciones para cada presupuesto</p>
+			</div>
+		</div>
+		<div class="cardservice-sibeduina">
+			<figure class="cardservice-image">
+				<img src="assets/foto b- service.jpg" alt="servcio prueba">
+			</figure>
+			<div class="textcontentcards-service">
+				<h2>Plan anual</h2>
+				<p>Planea tu boda hoy, y nosotras nos encargamos del resto. </p>
+			</div>
+		</div>
+		<div class="cardservice-sibeduina">
+			<figure class="cardservice-image">
+				<img src="assets/foto c- service.jpg" alt="servcio prueba">
+			</figure>
+			<div class="textcontentcards-service">
+				<h2>Organigrama y organización</h2>
+				<p>Detallamos cada aspecto del presupuesto y garantizamos el evento</p>
+			</div>
+		</div>
+	</section>
     <!--contenido empresas que confian-->
-    <div class="contenedor__emplogos">
-    	<p class="texto__marcas">Aca van a estar las marcas</p>
-    	<img class="" src="" alt="">
-    	<img class="" src="" alt="">
-    	<img class="" src="" alt="">
-    	<img class="" src="" alt="">
+    <div class="contenedor__emplogos text-center">
+		<div class="contenedor_emplogos_marcas">
+			<div class="col-md-3 row">
+				<div class="logoempresa">
+				<img src="assets/casamientoslogo.png" alt="empresa casamientos.com">
+				</div>
+			</div>
+			<div class="col-md-3 row">
+				<div class="logoempresa">
+				<img src="assets/weddingcompany-logo.png" alt="empresa wedding company">
+				</div>
+			</div>
+			<div class="col-md-3 row">
+				<div class="logoempresa">
+				<img src="assets/eventbritelogo.png" alt="empresa eventbrite">
+				</div>
+			</div>
+			<div class="col-md-3 row">
+				<div class="logoempresa">
+				<img src="assets/arpilarweddingslogo.png" alt="empresa arpilar weddings">
+				</div>
+			</div>
+		</div>
     </div>
     <!--texto form home-->
     <div class="texto__container__form__home">
@@ -100,7 +135,7 @@
 		<p>Realizamos ambientaciones campestres</p>
 	</div>
     <!--contenido form-->
-    <div class="form__container__home p-4">
+    <div class="form__container__home p-4 w-50 mx-auto">
     	<div class="mb-3">
   			<label for="exampleFormControlInput1" class="form-label">Email address</label>
   			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -113,10 +148,6 @@
 			<button type="button" class="btn btn-dark">enviar</button>
 		</div>
     </div>
-    <!--<div class="contenedor__form">
-    	<div class="texto__form">
-    		<p>Acompañamos tu felicidad (formualario)</p>
-    </div>-->
     <!--footer-->
     <div class="footer__container">
     	<div class="footer">
@@ -125,9 +156,9 @@
 			</div>
 			<div>
 				<ul class="footer__redes">
-					<li>Instagram</li>
-					<li>Facebook</li>
-					<li>Pinterest</li>
+					<li><a href="https://www.instagram.com/ambeduina/?hl=es">Instagram</a></li>
+					<li><a href="https://www.facebook.com/ambeduina/">Facebook</a></li>
+					<li><a href="https://ar.pinterest.com/ambediuna/_created/">Pinterest</a></li>
 				</ul>
 			</div>
 		</div>
