--- a/info.html
+++ b/info.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Info</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!---bootstrap-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-</head>
+	<title>Info</title>
 <body>
 	<!--header padre-->
 	<div class="container__h">
@@ -22,20 +23,86 @@
 			</div>
 		</div>
 	</div>
+	<!---Info quienes somos-->
+	<div class="container_informacion_ambeduina_padre">
+		<div class="content-imagen-info">
+			<div class="bloque-imagen-info-beduina">
+				<img src="assets/info-header-desktop2.jpg" alt="foto-beduina-ambientaciones-iform">
+			</div>
+		</div>
+		<div class="content-textoinformacion">
+			<div class="bloque-de-texto-info">
+				<h1>¡Hola! somos Beduina ambientaciones</h1>
+				<p>Somos tres hermanas especialistas en ambientación de bodas con inspiración en la naturaleza. Nos especializamos en la ambientacion de eventos campestres, y realizamos diseños en follaje y flores. Cada ambientación es personalizada. Ven a conocernos.</p>
+			</div>
+		</div>
+	</div>
+	<!--info elegirnos-->
+	<div class="container_si_elegirnos text-center">
+		<p class="titulo_elegirnos">Por qué elegirnos</p>
+		<div class="container_iconos_elegirnos">
+			<div class="col-md-3 row">
+				<div class="icono_elegirnos_especialistas">
+					<img src="assets/icono_servicio_1.png" alt="servicio-1-beduina">
+					<p class="texto-icono-somos">Tenemos más de cinco años de experiencia ambientando bodas</p>
+				</div>
+			</div>
+			<div class="col-md-3 row">
+				<div class="icono_elegirnos_especialistas">
+					<img src="assets/icono_servicio_2.png" alt="servicio-1-beduina">
+					<p class="texto-icono-somos">Contamos con un equipo especializado en arreglo floral campestre</p>
+				</div>
+			</div>
+			<div class="col-md-3 row">
+				<div class="icono_elegirnos_especialistas">
+					<img src="assets/icono_servicio_3.png" alt="servicio-1-beduina">
+					<p class="texto-icono-somos">Somos diseñadoras y artesanas. Hacemos de tu boda un evento mágico</p>
+				</div>
+			</div>
+		<div class="col-md-3 row">
+			<div class="icono_elegirnos_especialistas">
+				<img src="assets/icono_servicio_4.png" alt="servicio-1-beduina">
+				<p class="texto-icono-somos">Nos importa la naturaleza, y nos basamos en el reciclaje de elementos</p>
+			</div>
+		</div>
+	</div>
+	<!--opiniones casamientos.com-->
+	<div class="container_opiniones_casamientos">
+	<div id="carouselWithControls" class="carousel slide" data-bs-ride="carousel">
+  		<p class="titulo-opiniones-clientes">Opiniones de nuestros clientes</p>
+  		<div class="carousel-inner">
+    		<div class="carousel-item">
+    			<p class="carousel-slide-1 d-block w-100">"Hermosa ambientación.  Nos dieron un montón de ideas, ajustándose a nuestro presupuesto. ¡El día de la fiesta todo estuvo excelente! Super recomendable."</p>
+    		</div>
+    		<div class="carousel-item active">
+    			<p class="carousel-slide-2 d-block w-100">"Unas genias las chicas. Supieron captar nuestros gustos desde el momento cero y superaron nuestras expectativas. Ampliamente recomendable."</p>
+    		</div>
+    		<div class="carousel-item">
+    			<p class="carousel-slide-3 d-block w-100">"Las chicas de Beduina son no sólo muy buenas profesionales sino que tienen toda la calidez y buena onda que debe rodear a los novios previo a la fiesta."</p>
+    		</div>
+    	</div>
+    	<a class="carousel-control-prev" href="#carouselWithControls" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></a>
+  		<a class="carousel-control-next" href="#carouselWithControls" role="button" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></a>
+	</div>
+	<!--Info nuestros reconocimientos-->
+	<div class="container_reconicimiento">
+
+	</div>
 	<!--footer-->
-    <div class="footer__container">
-    	<div class="footer">
+	<div class="footer__container">
+		<div class="footer">
 			<div>
 				<img class="footer__logo" src="assets/logo-beduina-2-mini.png" alt="logo-beduina-ambientaciones-blanco">
 			</div>
 			<div>
 				<ul class="footer__redes">
-					<li>Instagram</li>
-					<li>Facebook</li>
-					<li>Pinterest</li>
+					<li><a href="https://www.instagram.com/ambeduina/?hl=es">Instagram</a></li>
+					<li><a href="https://www.facebook.com/ambeduina/">Facebook</a></li>
+					<li><a href="https://ar.pinterest.com/ambediuna/_created/">Pinterest</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
