--- a/servicios.html
+++ b/servicios.html
@@ -4,6 +4,7 @@
 	<title>Servicios</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
@@ -22,7 +23,73 @@
 			</div>
 		</div>
 	</div>
+	<!--header-servicio-->
+	<div class="bloque-texto-servicio col-md-12">
+		<h1>Nuestros servicios</h1>
+		<p class="subtexto-servicio">Te acompañamos en todo el procesos de la preparación de tu boda. Hacemos del momento más especial de tu vida, un sueño hecho realidad.
+		 Contamos con un especialista en la creación de ramos y boutonieres diseñados según la ambientación.
+		</p>
+	</div>
+	<!--Nuestros servicios-->
+	<section class="contenedorcards-pag-servicios">
+		<div class="cardservice-sibeduina">
+			<figure class="cardservice-image">
+				<img src="assets/servicio-img1.png" alt="servcio prueba">
+			</figure>
+			<div class="textcontentcards-service">
+				<h2>Servicio personalizado</h2>
+				<p>Ambientaciones para cada presupuesto</p>
+				<a href="formulario.html">Más Info</a>
+			</div>
+		</div>
+		<div class="cardservice-sibeduina">
+			<figure class="cardservice-image">
+				<img src="assets/servicio-img4.png" alt="servcio prueba">
+			</figure>
+			<div class="textcontentcards-service">
+				<h2>Accesorios de boda</h2>
+				<p>Ramos y Boutonnieres, souvernir y más</p>
+				<a href="formulario.html">Más Info</a>
+			</div>
+		</div>
+		<div class="cardservice-sibeduina">
+			<figure class="cardservice-image">
+				<img src="assets/servicio-img3.png" alt="servcio prueba">
+			</figure>
+			<div class="textcontentcards-service">
+				<h2>Diseño de invitaciones</h2>
+				<p>Trajetas de invitación digitales y artesanales</p>
+				<a href="formulario.html">Más Info</a>
+			</div>
+		</div>
+	</section>
+	<!--Seccion de premios-->
+	<section class="containerPremios">
+		<div class="bloque-texto-servicio col-md-12">
+			<h1>Reconocimientos</h1>
+			<p class="subtexto-servicio">Obtuvimos reconocimiento en Casamientos.com como uno de los proveedores mejor valorados. ¡Gracias a nuestros clientes por compartir su experiencia!.
+			</p>
+		</div>
+		<div class="contenedor-premios-logos">
+			<div class="contenedor-imagen-premio">
+				<div class="premioss">
+					<img src="assets/premio1.jpg" alt="premio- de-boda">
+				</div>
+			</div>
+			<div class="contenedor-imagen-premio">
+				<div class="premioss">
+					<img src="assets/premio3.jpg" alt="premio- de-boda">
+				</div>
+			</div>
+			<div class="contenedor-imagen-premio">
+				<div class="premioss">
+					<img src="assets/premio2.jpg" alt="premio- de-boda">
+				</div>
+			</div>
+		</div>
+	</section>
 	<!--footer-->
+	<div class="espacio"></div>
     <div class="footer__container">
     	<div class="footer">
 			<div>
@@ -30,12 +97,13 @@
 			</div>
 			<div>
 				<ul class="footer__redes">
-					<li>Instagram</li>
-					<li>Facebook</li>
-					<li>Pinterest</li>
+					<li><a href="https://www.instagram.com/ambeduina/?hl=es">Instagram</a></li>
+					<li><a href="https://www.facebook.com/ambeduina/">Facebook</a></li>
+					<li><a href="https://ar.pinterest.com/ambediuna/_created/">Pinterest</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
